in progress with updateUser function
